k8s-wordpress/mysql.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
    name: mysql

spec:
    replicas: 1
    selector:
        matchLabels:
            web: mysql
    template:
        metadata:
            labels:
                web: mysql

        spec:
            containers:
            - name: wordpress-mysql
              image: mysql:5.7
              imagePullPolicy: IfNotPresent
              ports:
              - containerPort: 3306 

---
apiVersion: v1
kind: Service
metadata:
    name: test-mysql
spec:
    ports:
    - port: 3306
    selector:
        web: mysql
