k8s-wordpress/wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: wordpress
spec:
    replicas: 1
    selector:
        matchLabels:
            name: wordpress
    template:
        metadata:
            labels:
                name: wordpress
        spec:
            containers:
            - name: wordpress
              image: wordpress
              imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
    name: test-wordpress
spec:
    ports:
    - port: 80
    selector:
        name: wordpress
